--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body{
 .container{
     padding: 70px;
     background: var(--Very-light-gray-background-headings-buttons);
-    margin-top: 100px;
+    margin: 25px auto 50px;
     box-shadow: rgb(1 1 1 / 50%) 1px 1px 10px 1px;
 
 }
@@ -114,16 +114,10 @@ body{
 /* FOOTER */
 
 .last-footer{
-    background-color:var(--Very-dark-cyan) ;
-    padding: 25px 0 10px;
-    color:var(--Transparent-white-paragraphs);
+
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-
 }
 
 .last-footer p{
@@ -134,6 +128,15 @@ body{
 .last-footer a{
     text-decoration: none;
 }
+
+@media screen and (max-width:991px){
+
+    .col-md-4{
+        padding: 100px 25px;
+        
+    }
+}
+
 
 
 @media screen and (max-width:768px){
@@ -154,19 +157,7 @@ body{
 
     }
 
-    .last-footer{
-        position: relative;
-        margin-top: 550px;
-      }
-
+    
 }
 
 
-@media screen and (max-width:500px){
-
-
-    .last-footer{
-      position: relative;
-      margin-top: 600px;
-    }
-}
